# nemoclaw-agent

./: .gitignore  LICENSE  Makefile  README.md  SCOPE.md  pyproject.toml  requirements.txt
src/: analyze.py  cost.py  dashboard.py  recorder.py  remediate.py  report.py  route_demo.py  router.py  run.py  schema.py  verify_plan.py
src/adapters/: ingest.py
src/agents/: live_team.py  llm.py  team.py
src/detectors/: coordination.py
src/verifier/: fd_runner.py  plan_verifier.py
tests/: test_pipeline.py
